<resources>
    <string name="app_name">TeamProject2</string>
    <string name="title_map">Map</string>
    <string name="title_Directory">Directory</string>
    <string name="title_Calendar">Calendar</string>
    <string name="title_Courses">Courses</string>

    <string name="event_title">Title</string>
    <string name="event_desc">Description</string>
    <string name="save_event_Buttom">Save</string>
    <string name="savefile_Name">storage</string>


    <string name="profile_picture">Profile Picture</string>
    <string name="initial_first_last_name">Initial First Last Name</string>
    <string name="initial_position">Initial Position</string>
    <string name="initial_email">Initial Email</string>

</resources>