<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.teamproject2.ui.home.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_directory"
        android:name="com.example.teamproject2.ui.directory.DirectoryFragment"
        android:label="@string/title_Directory"
        tools:layout="@layout/fragment_directory" />

    <fragment
        android:id="@+id/navigation_calander"
        android:name="com.example.teamproject2.ui.calandar.CalendarFragment"
        android:label="@string/title_Calendar"
        tools:layout="@layout/fragment_calandar" />

    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.example.teamproject2.ui.courses.CoursesFragment"
        android:label="@string/title_Courses"
        android:layout="@layout/fragment_courses" />
</navigation>