<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_profilePic"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/profile_picture"/>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/initial_first_last_name"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/img_profilePic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:width="270dp"
        android:height="35dp"
        android:text="@string/initial_position"
        app:layout_constraintStart_toEndOf="@+id/img_profilePic"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:autoLink="email"
        android:text="@string/initial_email"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/img_profilePic"
        app:layout_constraintTop_toBottomOf="@+id/txt_position" />
</androidx.constraintlayout.widget.ConstraintLayout>